// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInGroupModal /> should render correctly with user in 2 groups 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    id="group2-modal"
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          Mon super groupe 2
        </b>
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush>
      <ListGroupItem
        bsClass="list-group-item"
        className="d-flex text-left"
        id="user1"
        key="user1"
        listItem={false}
      >
        <UserAvatar
          anchor={true}
          className=""
          defaultAvatar={null}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={45}
          style={Object {}}
          user={
            Object {
              "_links": Object {
                "profile": "http://poudre.de/perlinpinpin",
              },
              "media": Object {
                "id": "media1",
                "name": "perl1",
                "size": "45px",
                "url": "http://poudre.de/perlinpinpin.jpg",
              },
              "username": "Perlinpinpin",
            }
          }
        />
        <a
          className="align-self-center"
          href="http://poudre.de/perlinpinpin"
          title="usernames-profile"
        >
          Perlinpinpin
        </a>
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        className="d-flex text-left"
        id="user2"
        key="user2"
        listItem={false}
      >
        <UserAvatar
          anchor={true}
          className=""
          defaultAvatar={null}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={45}
          style={Object {}}
          user={
            Object {
              "_links": Object {
                "profile": "htp://toto.com",
              },
              "media": Object {
                "id": "media2",
                "name": "toto",
                "size": "45px",
                "url": "http://toto.com/image.jpg",
              },
              "username": "Toto",
            }
          }
        />
        <a
          className="align-self-center"
          href="htp://toto.com"
          title="usernames-profile"
        >
          Toto
        </a>
      </ListGroupItem>
    </ListGroupFlush>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<UserInGroupModal /> should render correctly with user in load more 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    id="group2-modal"
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          Mon super groupe 2
        </b>
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush>
      <ListGroupItem
        bsClass="list-group-item"
        className="d-flex text-left"
        id="user1"
        key="user1"
        listItem={false}
      >
        <UserAvatar
          anchor={true}
          className=""
          defaultAvatar={null}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={45}
          style={Object {}}
          user={
            Object {
              "_links": Object {
                "profile": "http://poudre.de/perlinpinpin",
              },
              "media": Object {
                "id": "media1",
                "name": "perl1",
                "size": "45px",
                "url": "http://poudre.de/perlinpinpin.jpg",
              },
              "username": "Perlinpinpin",
            }
          }
        />
        <a
          className="align-self-center"
          href="http://poudre.de/perlinpinpin"
          title="usernames-profile"
        >
          Perlinpinpin
        </a>
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        className="d-flex text-left"
        id="user2"
        key="user2"
        listItem={false}
      >
        <UserAvatar
          anchor={true}
          className=""
          defaultAvatar={null}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={45}
          style={Object {}}
          user={
            Object {
              "_links": Object {
                "profile": "htp://toto.com",
              },
              "media": Object {
                "id": "media2",
                "name": "toto",
                "size": "45px",
                "url": "http://toto.com/image.jpg",
              },
              "username": "Toto",
            }
          }
        />
        <a
          className="align-self-center"
          href="htp://toto.com"
          title="usernames-profile"
        >
          Toto
        </a>
      </ListGroupItem>
      <div
        className="text-center mt-15 mb-10"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          id="load-more"
          onClick={[Function]}
        >
          <FormattedMessage
            id="global.more"
            values={Object {}}
          />
        </Button>
      </div>
    </ListGroupFlush>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<UserInGroupModal /> should render correctly without user in group 1`] = `
<div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    id="group1-modal"
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <b>
          Mon super groupe 1
        </b>
      </ModalTitle>
    </ModalHeader>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.close"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;
